Fix freetime button overlaps duration time field

--- a/calendar/templates/default/app.css
+++ b/calendar/templates/default/app.css
@@ -676,3 +676,7 @@ img.calendar_print_button, img.calendar_print_appicon {
 .calendar_favorite_portlet .calendar_plannerScale a img{
 	display: none;
 }
+
+#calendar-edit select#calendar-edit_duration {
+	width: 133px;
+}
